--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,8 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/docs
 springdoc.swagger-ui.enabled=true
 
+# External APIs
+external.api.jobs.url=https://www.arbeitnow.com/api/job-board-api
+
 # Production settings
 spring.jpa.open-in-view=false
